--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     ],
     "linebreak-style": 0,
     "no-underscore-dangle": 0,
+    "object-curly-newline": 0,
     "no-restricted-syntax": [
       "error",
       "WithStatement"
