--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@actualwave/type-checkers",
   "description": "",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "main": "dist/type-checkers.js",
   "keywords": [
     "js",
@@ -18,7 +18,9 @@
     "type": "git",
     "url": "https://github.com/burdiuz/js-lib-environment.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash.has": "^4.5.2"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
