--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/burdiuz/js-lib-environment.git"
   },
   "dependencies": {
-    "lodash.has": "^4.5.2"
+    "@actualwave/hasOwn": "gist:d81cd59d2d619d921531165fac0e8c77"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
