--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@actualwave/type-checkers",
-  "description": "",
-  "version": "0.1.11",
+  "description": "Framework for parameter/value analysis on access or mutation, used for type check in runtime.",
+  "version": "0.1.12",
   "main": "dist/type-checkers.js",
   "keywords": [
     "js",
@@ -19,7 +19,7 @@
     "url": "https://github.com/burdiuz/js-lib-environment.git"
   },
   "dependencies": {
-    "@actualwave/has-own": "^0.0.1`"
+    "@actualwave/has-own": "^0.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
