--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@actualwave/type-checkers",
   "description": "Framework for parameter/value analysis on access or mutation, used for type check in runtime.",
   "version": "0.1.13",
-  "main": "dist/type-checkers.js",
+  "main": "index.js",
   "keywords": [
     "js",
     "javascript"
@@ -50,6 +50,7 @@
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-uglify": "^3.0.0",
@@ -101,7 +102,7 @@
     "build:watch": "rollup --config --watch \"./source\"",
     "lint": "./node_modules/.bin/eslint \"source/**/*.js\"",
     "flow": "./node_modules/.bin/flow",
-    "server": "rollup --config rollup.serve.js",
+    "server": "rollup --config rollup.serve.js --watch",
     "test": "jest --colors",
     "test:watch": "jest --colors --watch",
     "lint-staged": "lint-staged",
