update build config

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,8 +10,22 @@
   },
   "env": {
     "browser": true,
-    "node": true,
-    "jest": true
+    "node": true
+  },
+  "globals": {
+    "jest": true,
+    "describe": true,
+    "it": true,
+    "test": true,
+    "expect": true,
+    "should": true,
+    "assert": true,
+    "beforeEach": true,
+    "afterEach": true,
+    "beforeAll": true,
+    "afterAll": true,
+    "before": true,
+    "after": true
   },
   "rules": {
     "arrow-parens": [
@@ -20,13 +34,16 @@
     ],
     "linebreak-style": 0,
     "no-underscore-dangle": 0,
-    "object-curly-newline": 0,
     "no-restricted-syntax": [
       "error",
       "WithStatement"
     ],
     "no-param-reassign": 1,
     "padded-blocks": 0,
-    "no-plusplus": 0
+    "no-plusplus": 0,
+    "function-paren-newline": 0,
+    "object-curly-newline": 0,
+    "no-bitwise": 0,
+    "max-len": ["error", { "code": 120 }]
   }
 }
